<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.testhype.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/CustomFontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/pipehype_logo_all" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/ton_ueben"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/to_anleitung"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/beenden"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:checked="true"
        android:text="ToggleButton"
        android:textOff="@string/tonAn"
        android:textOn="@string/tonAus" />

</RelativeLayout>