<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.testhype.Selection"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:background="@drawable/button"
            android:text="@string/ton_auswaehlen"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:background="@drawable/button"
            android:text="@string/to_level_2"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:background="@drawable/button"
            android:text="@string/to_level_3"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/button"
            android:text="@string/Zurueck"
            android:textColor="@color/grey" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/tonauswahl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

</RelativeLayout>