<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Pipe Hype"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="181dp"
        android:layout_height="77dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:background="@drawable/button"
        android:text="@string/Aufnahme_starten"
        android:textColor="@color/grey"
        android:textOff="@string/Aufnahme_starten"
        android:textOn="@string/Aufnahme_stoppen"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_weight="0.3"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <RatingBar
	            android:id="@+id/ratingBar1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:numStars="6"
	            android:rotation="0" />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingBar1"
                android:layout_centerHorizontal="true"
                android:rotation="0" />

        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginTop="29dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_weight="0.02"
        android:orientation="vertical" >
        
        <Button
	        android:id="@+id/button2"
	        android:layout_width="136dp"
	        android:layout_height="wrap_content"
	        android:background="@drawable/button"
	        android:textColor="@color/grey"
	        android:text="@string/neustarten" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="139dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/button"
	        android:textColor="@color/grey"
	        android:text="@string/Zurueck" />
    </LinearLayout>

</RelativeLayout>